samples/_failures_safe/1761511118_5220b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b4effcc.c: In function ‘main’:
./samples/SAFE/__tmp_4b4effcc.c:126:13: error: expected expression at end of input
  126 |             print_matrix(rows1, cols2,
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_4b4effcc.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b4effcc.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b4effcc.c:126:13: error: expected declaration or statement at end of input
